SP Screen ResDev (Partial)/src/objects/ServiceAppointment.object
<CustomObject>
    <fields>
        <fullName>Assigned_Resource_ID__c</fullName>
        <label>Assigned Resource ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Resource_User_ID__c</fullName>
        <label>Assigned Resource User ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Resource__c</fullName>
        <label>Assigned Resource</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Mobile_Phone__c</fullName>
        <formula>Contact.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact.FirstName &amp; Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dispatch_Date__c</fullName>
        <formula>DATEVALUE( SchedStartTime )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dispatch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Rounded__c</fullName>
        <formula>DATETIMEVALUE( 
LEFT(TEXT( SchedEndTime   ),11) /* date string */ 
+ LPAD( 
TEXT( VALUE( MID(TEXT( SchedEndTime   ),12,2) ) + 
IF( VALUE(MID(TEXT( SchedEndTime   ),15,2)) &gt; 46, 1, 0) 
), 2, &quot;0&quot;) 
+ IF( VALUE(MID(TEXT( SchedEndTime   ),15,2)) &lt; 15, &quot;:00:00Z&quot; , 
IF( VALUE(MID(TEXT( SchedEndTime   ),15,2)) &lt; 29, &quot;:00:00Z&quot; , 
IF( VALUE(MID(TEXT( SchedEndTime   ),15,2)) &lt; 38, &quot;:30:00Z&quot; , 
IF( VALUE(MID(TEXT( SchedEndTime ),15,2)) &lt; 44, &quot;:30:00Z&quot; , 
&quot;:00:00Z&quot;) 
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Rounded</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSL__Appointment_Grade__c</fullName>
        <label>Appointment Grade</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Auto_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Emergency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Emergency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__GanttColor__c</fullName>
        <label>Gantt Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__GanttLabel__c</fullName>
        <label>Gantt Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__InJeopardyReason__c</fullName>
        <label>In Jeopardy Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delayed Start</fullName>
                </value>
                <value>
                    <fullName>Delayed Finish</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Due Date Approaching</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__InJeopardy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Jeopardy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__InternalSLRGeolocation__c</fullName>
        <label>Internal SLR Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>FSL__IsFillInCandidate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Fill In Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__IsMultiDay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is MultiDay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__MDS_Calculated_length__c</fullName>
        <label>Multiday Work Calculated length</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__MDT_Operational_Time__c</fullName>
        <label>Multiday Work Operational Time</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Pinned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pinned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Prevent_Geocoding_For_Chatter_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevent Geocoding For Chatter Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Related_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Service</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Same_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Same_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Schedule_Mode__c</fullName>
        <label>Schedule Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Automatic</fullName>
                </value>
                <value>
                    <fullName>Optimization</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Schedule_over_lower_priority_appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schedule Over Lower Priority Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Scheduling_Policy_Used__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduling Policy Used</label>
        <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Time_Dependency__c</fullName>
        <label>Time Dependency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Same Start</fullName>
                </value>
                <value>
                    <fullName>Start After Finish</fullName>
                </value>
                <value>
                    <fullName>Finish Before Start</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__UpdatedByOptimization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UpdatedByOptimization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Virtual_Service_For_Chatter_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual Service For Chatter Action (SLR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sched_end_plus_half_an_hour__c</fullName>
        <formula>IF(VALUE(LPAD(MID(TEXT( ArrivalWindowEndTime  + 0.458333), 12, 5),2)) = 12 ,
MID(TEXT(ArrivalWindowEndTime  + 0.458333), 12, 5)+&apos; PM&apos;,
IF(VALUE(LPAD(MID(TEXT(ArrivalWindowEndTime  + 0.458333), 12, 5),2)) &lt; 12, IF(VALUE(LPAD(MID(TEXT(ArrivalWindowEndTime  + 0.458333), 12, 5),2)) = 00, TEXT(12)+MID(TEXT(ArrivalWindowEndTime  + 0.458333), 14, 3), IF(VALUE(LPAD(MID(TEXT(ArrivalWindowEndTime  + 0.458333), 12, 5),2)) &lt; 10, MID(TEXT(ArrivalWindowEndTime  + 0.458333), 13, 4), MID(TEXT(ArrivalWindowEndTime  + 0.458333), 12, 5)))+&apos; AM&apos;, TEXT(VALUE(MID(TEXT(ArrivalWindowEndTime  + 0.458333), 12, 2))-12)+MID(TEXT(ArrivalWindowEndTime  + 0.458333), 14, 3)+&apos; PM&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sched end plus half an hour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sched_start_less_half_an_hour__c</fullName>
        <formula>IF(VALUE(LPAD(MID(TEXT(  ArrivalWindowStartTime + 0.458333), 12, 5),2)) = 12 , 
MID(TEXT(ArrivalWindowStartTime + 0.458333), 12, 5)+&apos; PM&apos;, 
IF(VALUE(LPAD(MID(TEXT(ArrivalWindowStartTime + 0.458333), 12, 5),2)) &lt; 12, IF(VALUE(LPAD(MID(TEXT(ArrivalWindowStartTime + 0.458333), 12, 5),2)) = 00, TEXT(12)+MID(TEXT(ArrivalWindowStartTime + 0.458333), 14, 3), IF(VALUE(LPAD(MID(TEXT(ArrivalWindowStartTime + 0.458333), 12, 5),2)) &lt; 10, MID(TEXT(ArrivalWindowStartTime + 0.458333), 13, 4), MID(TEXT(ArrivalWindowStartTime + 0.458333), 12, 5)))+&apos; AM&apos;, TEXT(VALUE(MID(TEXT(ArrivalWindowStartTime + 0.458333), 12, 2))-12)+MID(TEXT(ArrivalWindowStartTime + 0.458333), 14, 3)+&apos; PM&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sched start less half an hour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Rounded__c</fullName>
        <formula>DATETIMEVALUE( 
LEFT(TEXT( SchedStartTime  ),11) /* date string */ 
+ LPAD( 
TEXT( VALUE( MID(TEXT( SchedStartTime  ),12,2) ) + 
IF( VALUE(MID(TEXT( SchedStartTime  ),15,2)) &gt; 46, 1, 0) 
), 2, &quot;0&quot;) 
+ IF( VALUE(MID(TEXT( SchedStartTime  ),15,2)) &lt; 15, &quot;:00:00Z&quot; , 
IF( VALUE(MID(TEXT( SchedStartTime  ),15,2)) &lt; 29, &quot;:00:00Z&quot; , 
IF( VALUE(MID(TEXT( SchedStartTime  ),15,2)) &lt; 38, &quot;:30:00Z&quot; , 
IF( VALUE(MID(TEXT( SchedStartTime  ),15,2)) &lt; 44, &quot;:30:00Z&quot; , 
&quot;:00:00Z&quot;) 
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Rounded</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subject_Formula__c</fullName>
        <formula>Contact.Account.Name + &apos; - &apos; +  Work_Order__r.WorkType.Name</formula>
        <label>New Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WO_Important_Notes__c</fullName>
        <label>WO Important Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Type_Hidden__c</fullName>
        <formula>Work_Order__r.WorkTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Type (Hidden)</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_ServiceAppointments</fullName>
        <columns>Name</columns>
        <columns>ParentRecord</columns>
        <columns>Contact</columns>
        <columns>WorkType</columns>
        <columns>CreatedDate</columns>
        <columns>SchedStartTime</columns>
        <columns>ParentRecordType</columns>
        <columns>Status</columns>
        <columns>FSL__Related_Service__c</columns>
        <columns>ArrivalWindowStartTime</columns>
        <columns>ArrivalWindowEndTime</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FSL__Related_Service__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Service Appointments</label>
    </listViews>
    <listViews>
        <fullName>FieldServiceMobileAppView</fullName>
        <columns>Name</columns>
        <columns>ParentRecord</columns>
        <columns>Subject</columns>
        <columns>Status</columns>
        <columns>Account</columns>
        <filterScope>AssignedToMe</filterScope>
        <filters>
            <field>SchedStartTime</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>SchedEndTime</field>
            <operation>notEqual</operation>
        </filters>
        <label>FieldServiceMobileAppView</label>
    </listViews>
    <listViews>
        <fullName>Mandy_To_Do</fullName>
        <columns>WorkType</columns>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>Subject</columns>
        <columns>Description</columns>
        <columns>LatestEndTime</columns>
        <columns>ParentRecord</columns>
        <columns>ParentRecordType</columns>
        <columns>Status</columns>
        <columns>ArrivalWindowStartTime</columns>
        <columns>ArrivalWindowEndTime</columns>
        <columns>FSL__Scheduling_Policy_Used__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ServiceTerritory</field>
            <operation>equals</operation>
            <value>Sydney Region</value>
        </filters>
        <filters>
            <field>Status</field>
            <operation>contains</operation>
            <value>None</value>
        </filters>
        <label>Mandy To Do</label>
        <sharedTo>
            <group>Sydney_Region</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_ServiceAppointments</fullName>
        <columns>Name</columns>
        <columns>ParentRecord</columns>
        <columns>ParentRecordType</columns>
        <columns>Status</columns>
        <columns>ArrivalWindowStartTime</columns>
        <columns>ArrivalWindowEndTime</columns>
        <columns>WorkType</columns>
        <filterScope>Mine</filterScope>
        <label>My Service Appointments</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FSL__Dont_allow_scheduled_or_dispatched</fullName>
        <active>true</active>
        <description>Don&apos;t allow creation of service with status scheduled or  dispatched</description>
        <errorConditionFormula>AND($Setup.FSL__Service_Creation_Validation_Rules__c.FSL__Service_Creation_Status_Validation__c,AND(ISNEW(),(OR(ISPICKVAL(StatusCategory, &quot;Scheduled&quot;),ISPICKVAL(StatusCategory, &quot;Dispatched&quot;)))))</errorConditionFormula>
        <errorMessage>New service appointment cannot be created in scheduled or  dispatched statuses.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Related_Service_with_time_dependency</fullName>
        <active>true</active>
        <description>If related service is not empty then time dependency is not empty</description>
        <errorConditionFormula>( !ISBLANK(FSL__Related_Service__c) &amp;&amp; ( ISBLANK(TEXT(FSL__Time_Dependency__c)) &amp;&amp; !FSL__Same_Day__c &amp;&amp; !FSL__Same_Resource__c ) )</errorConditionFormula>
        <errorMessage>Please select Time Dependency or Same Day or Same Reosurce .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Same_Resource_Same_Start</fullName>
        <active>true</active>
        <description>Can&apos;t be same start and same reosurce</description>
        <errorConditionFormula>TEXT(FSL__Time_Dependency__c) = &quot;Same Start&quot; &amp;&amp; FSL__Same_Resource__c</errorConditionFormula>
        <errorMessage>Resource dependency is invalid. Time Dependency can&apos;t be Same Start when same resource is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Schedule_End_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(SchedEndTime) &amp;&amp; NOT(ISNULL(SchedStartTime))</errorConditionFormula>
        <errorDisplayField>SchedEndTime</errorDisplayField>
        <errorMessage>Both scheduled start and end are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Schedule_Start_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(SchedStartTime) &amp;&amp; NOT(ISNULL(SchedEndTime))</errorConditionFormula>
        <errorDisplayField>SchedStartTime</errorDisplayField>
        <errorMessage>Both scheduled start and end are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Service_Color_HEX_Format</fullName>
        <active>true</active>
        <errorConditionFormula>(!ISBLANK(FSL__GanttColor__c)) &amp;&amp; (NOT(REGEX(FSL__GanttColor__c, &quot;#[a-fA-F0-9]{6}&quot;)))</errorConditionFormula>
        <errorDisplayField>FSL__GanttColor__c</errorDisplayField>
        <errorMessage>Gantt color must be in hexadecimal format: (for example: #ffffff)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Time_dependency_with_related_service</fullName>
        <active>true</active>
        <errorConditionFormula>( ISBLANK(FSL__Related_Service__c) &amp;&amp; ( !ISBLANK(TEXT(FSL__Time_Dependency__c)) ||  FSL__Same_Day__c || FSL__Same_Resource__c ) )</errorConditionFormula>
        <errorDisplayField>FSL__Related_Service__c</errorDisplayField>
        <errorMessage>Please select Related Service.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__isDueDateExist</fullName>
        <active>false</active>
        <description>Check if DueDate field exist on service appointment.</description>
        <errorConditionFormula>ISNULL(  DueDate )</errorConditionFormula>
        <errorDisplayField>DueDate</errorDisplayField>
        <errorMessage>DueDate field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__isDurationExist</fullName>
        <active>true</active>
        <description>Check if Duration field exist on service appointment.</description>
        <errorConditionFormula>ISNULL(Duration)</errorConditionFormula>
        <errorDisplayField>Duration</errorDisplayField>
        <errorMessage>Duration field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__isEarliestStartTimeExist</fullName>
        <active>false</active>
        <description>Check if EarliestStartTime field exist on service appointment.</description>
        <errorConditionFormula>ISNULL( EarliestStartTime )</errorConditionFormula>
        <errorDisplayField>EarliestStartTime</errorDisplayField>
        <errorMessage>EarliestStartTime field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__startTimeShouldPrecedeEndTime</fullName>
        <active>false</active>
        <errorConditionFormula>SchedEndTime &lt;=  SchedStartTime</errorConditionFormula>
        <errorDisplayField>SchedStartTime</errorDisplayField>
        <errorMessage>The Scheduled Start must be earlier than the Scheduled End.</errorMessage>
    </validationRules>
</CustomObject>